Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -456,6 +456,37 @@
     ]
   },
   {
+    "title": "Học ngành nào để 4-5 năm nữa vẫn có việc làm?",
+    "content": "Bài viết đề cập đến nỗi lo lắng của học sinh và phụ huynh về việc chọn ngành học trong bối cảnh công nghệ AI đang phát triển mạnh mẽ. Nhiều ngành như tài chính, ngân hàng và truyền thông đối mặt với nguy cơ bị thay thế bởi AI, khiến các em lo ngại về cơ hội việc làm trong tương lai. Tuy nhiên, các chuyên gia khẳng định rằng công nghệ sẽ không hoàn toàn thay thế con người mà còn tạo ra nhiều cơ hội mới, và người học cần không ngừng cải thiện kỹ năng để thích ứng với thị trường lao động.",
+    "link": "https://dantri.com.vn/giao-duc/hoc-nganh-nao-de-4-5-nam-nua-van-co-viec-lam-20250319213313023.htm",
+    "cat": "giao-duc",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Ngành học nào nên chọn để có việc làm trong 4-5 năm tới?",
+    "answers": [
+      {
+        "text": "Tài chính - ngân hàng",
+        "correct": true
+      },
+      {
+        "text": "Báo chí truyền thông",
+        "correct": false
+      },
+      {
+        "text": "Kỹ thuật phần mềm",
+        "correct": false
+      },
+      {
+        "text": "Nghệ thuật sáng tạo",
+        "correct": false
+      },
+      {
+        "text": "Y tế và công nghệ sinh học",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Phân khúc CUV cỡ C - Territory và CX-5 bỏ xa phần còn lại",
     "content": "Trong phân khúc CUV cỡ C, Mazda CX-5 và Ford Territory đang chiếm ưu thế vượt trội với tổng doanh số gần 60% thị phần. Trong hai tháng đầu năm 2025, CX-5 vẫn dẫn đầu với 923 xe bán ra, trong khi Territory theo sau nhưng vẫn còn khoảng cách lớn. Các đối thủ như Honda CR-V, Hyundai Tucson và Kia Sportage ghi nhận doanh số thấp hơn nhiều, cho thấy sự thống trị của CX-5 và Territory.",
     "link": "https://vnexpress.net/phan-khuc-cuv-co-c-territory-va-cx-5-bo-xa-phan-con-lai-4863304.html",
@@ -559,37 +590,6 @@
       },
       {
         "text": "Chỉ đơn giản là thích nghỉ việc",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Học ngành nào để 4-5 năm nữa vẫn có việc làm?",
-    "content": "Bài viết đề cập đến nỗi lo lắng của học sinh và phụ huynh về việc chọn ngành học trong bối cảnh công nghệ AI đang phát triển mạnh mẽ. Nhiều ngành như tài chính, ngân hàng và truyền thông đối mặt với nguy cơ bị thay thế bởi AI, khiến các em lo ngại về cơ hội việc làm trong tương lai. Tuy nhiên, các chuyên gia khẳng định rằng công nghệ sẽ không hoàn toàn thay thế con người mà còn tạo ra nhiều cơ hội mới, và người học cần không ngừng cải thiện kỹ năng để thích ứng với thị trường lao động.",
-    "link": "https://dantri.com.vn/giao-duc/hoc-nganh-nao-de-4-5-nam-nua-van-co-viec-lam-20250319213313023.htm",
-    "cat": "giao-duc",
-    "positivity": 7,
-    "importance": 9,
-    "question": "Ngành học nào nên chọn để có việc làm trong 4-5 năm tới?",
-    "answers": [
-      {
-        "text": "Tài chính - ngân hàng",
-        "correct": true
-      },
-      {
-        "text": "Báo chí truyền thông",
-        "correct": false
-      },
-      {
-        "text": "Kỹ thuật phần mềm",
-        "correct": false
-      },
-      {
-        "text": "Nghệ thuật sáng tạo",
-        "correct": false
-      },
-      {
-        "text": "Y tế và công nghệ sinh học",
         "correct": false
       }
     ]
@@ -823,33 +823,6 @@
     ]
   },
   {
-    "title": "Một ngày luyện trình diễn tiêm kích Su-30MK2",
-    "content": "Vào sáng 18/3, tại sân bay Biên Hoà, Đồng Nai, các phi công đã thực hiện buổi huấn luyện trình diễn cho tiêm kích Su-30MK2, chuẩn bị cho sự kiện vào ngày 30/4. Trong buổi tập, các phi công phải thực hiện các động tác bay phức tạp và kiểm tra kỹ lưỡng các thiết bị trước khi cất cánh. Su-30MK2 là máy bay chiến đấu hiện đại nhất của quân đội Việt Nam, được trang bị nhiều loại vũ khí và có khả năng bay với tốc độ cao. Buổi tập này là một phần trong kế hoạch chuẩn bị cho màn trình diễn lớn vào dịp lễ sắp tới.",
-    "link": "https://vnexpress.net/mot-ngay-luyen-trinh-dien-tiem-kich-su-30mk2-4863011.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Lý do nào khiến các phi công huấn luyện tiêm kích Su-30MK2 tại Đồng Nai?",
-    "answers": [
-      {
-        "text": "Chuẩn bị cho buổi trình diễn vào ngày 30/4",
-        "correct": true
-      },
-      {
-        "text": "Để kiểm tra kỹ thuật máy bay",
-        "correct": false
-      },
-      {
-        "text": "Để thực hiện các bài tập thể lực",
-        "correct": false
-      },
-      {
-        "text": "Để tham dự một cuộc thi quốc tế",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "5 người thoát chết khi ôtô lao xuống sông vì theo Google Maps",
     "content": "Một gia đình gồm 5 người đã thoát chết khi chiếc ôtô của họ lao xuống sông Gayathripuzha, Ấn Độ, do tuân theo hướng dẫn của Google Maps. Sự việc xảy ra vào lúc 19h30 ngày 16/3 khi họ đang trở về từ chuyến đi mua sắm. Mặc dù ôtô chìm hơn một nửa dưới nước, nhưng may mắn là tất cả các thành viên trong gia đình đều không bị thương. Tai nạn này đã làm dấy lên lo ngại về độ tin cậy của các ứng dụng định vị trong việc chỉ đường, đặc biệt ở những khu vực hạ tầng giao thông kém phát triển.",
     "link": "https://vnexpress.net/5-nguoi-thoat-chet-khi-oto-lao-xuong-song-vi-theo-google-maps-4863161.html",
@@ -872,6 +845,33 @@
       },
       {
         "text": "sông Mekong, Việt Nam",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Một ngày luyện trình diễn tiêm kích Su-30MK2",
+    "content": "Vào sáng 18/3, tại sân bay Biên Hoà, Đồng Nai, các phi công đã thực hiện buổi huấn luyện trình diễn cho tiêm kích Su-30MK2, chuẩn bị cho sự kiện vào ngày 30/4. Trong buổi tập, các phi công phải thực hiện các động tác bay phức tạp và kiểm tra kỹ lưỡng các thiết bị trước khi cất cánh. Su-30MK2 là máy bay chiến đấu hiện đại nhất của quân đội Việt Nam, được trang bị nhiều loại vũ khí và có khả năng bay với tốc độ cao. Buổi tập này là một phần trong kế hoạch chuẩn bị cho màn trình diễn lớn vào dịp lễ sắp tới.",
+    "link": "https://vnexpress.net/mot-ngay-luyen-trinh-dien-tiem-kich-su-30mk2-4863011.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Lý do nào khiến các phi công huấn luyện tiêm kích Su-30MK2 tại Đồng Nai?",
+    "answers": [
+      {
+        "text": "Chuẩn bị cho buổi trình diễn vào ngày 30/4",
+        "correct": true
+      },
+      {
+        "text": "Để kiểm tra kỹ thuật máy bay",
+        "correct": false
+      },
+      {
+        "text": "Để thực hiện các bài tập thể lực",
+        "correct": false
+      },
+      {
+        "text": "Để tham dự một cuộc thi quốc tế",
         "correct": false
       }
     ]
@@ -1355,6 +1355,37 @@
       },
       {
         "text": "250 du khách",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hungary đào tạo 1.000 người vận hành nhà máy điện hạt nhân cho Việt Nam",
+    "content": "Hungary đã đồng ý hỗ trợ Việt Nam đào tạo 1.000 chuyên gia vận hành nhà máy điện hạt nhân, theo đề nghị của Thủ tướng Phạm Minh Chính. Trong cuộc gặp gỡ với Bộ trưởng Ngoại giao và Kinh tế đối ngoại Hungary, ông Szijjártó Péter, Thủ tướng nhấn mạnh tầm quan trọng của việc hợp tác trong lĩnh vực này, đặc biệt khi Việt Nam đang có nhu cầu cấp bách. Hungary có kinh nghiệm lâu năm trong vận hành các nhà máy điện hạt nhân và coi đây là một lĩnh vực hợp tác chiến lược giữa hai nước.",
+    "link": "https://tuoitre.vn/hungary-dao-tao-1-000-nguoi-van-hanh-nha-may-dien-hat-nhan-cho-viet-nam-20250319195454554.htm",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Hungary sẽ đào tạo bao nhiêu người cho Việt Nam trong lĩnh vực điện hạt nhân?",
+    "answers": [
+      {
+        "text": "1.000",
+        "correct": true
+      },
+      {
+        "text": "500",
+        "correct": false
+      },
+      {
+        "text": "2.000",
+        "correct": false
+      },
+      {
+        "text": "1.500",
+        "correct": false
+      },
+      {
+        "text": "3.000",
         "correct": false
       }
     ]
@@ -1909,32 +1940,28 @@
     ]
   },
   {
-    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
-    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
-    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
-    "cat": "suc-khoe",
+    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
+    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
+    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
+    "cat": "giai-tri",
     "positivity": 6,
-    "importance": 8,
-    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
+    "importance": 7,
+    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
     "answers": [
       {
-        "text": "Khó thở và ho khan kéo dài",
+        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
         "correct": true
       },
       {
-        "text": "Đau đầu và chóng mặt",
+        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
         "correct": false
       },
       {
-        "text": "Nôn mửa và tiêu chảy",
+        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
         "correct": false
       },
       {
-        "text": "Mệt mỏi và sốt cao",
-        "correct": false
-      },
-      {
-        "text": "Đau bụng và khó tiêu",
+        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
         "correct": false
       }
     ]
@@ -2025,6 +2052,37 @@
     ]
   },
   {
+    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
+    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
+    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
+    "answers": [
+      {
+        "text": "Khó thở và ho khan kéo dài",
+        "correct": true
+      },
+      {
+        "text": "Đau đầu và chóng mặt",
+        "correct": false
+      },
+      {
+        "text": "Nôn mửa và tiêu chảy",
+        "correct": false
+      },
+      {
+        "text": "Mệt mỏi và sốt cao",
+        "correct": false
+      },
+      {
+        "text": "Đau bụng và khó tiêu",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ăn uống, sinh hoạt thế nào khi còn một quả thận?",
     "content": "Bài viết cung cấp thông tin về cách sinh hoạt và chế độ ăn uống cho người còn một quả thận. Sau phẫu thuật cắt thận, người bệnh cần chú ý bảo vệ sức khỏe, tránh các môn thể thao va chạm và áp dụng chế độ dinh dưỡng lành mạnh, cân bằng, giảm muối và hạn chế thực phẩm chứa kali, phốt pho. Đồng thời, cần theo dõi sức khỏe định kỳ và thận trọng khi sử dụng thuốc không kê đơn.",
     "link": "https://vnexpress.net/an-uong-sinh-hoat-the-nao-khi-con-mot-qua-than-4863313.html",
@@ -2047,33 +2105,6 @@
       },
       {
         "text": "Không cần kiểm tra sức khỏe định kỳ.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
-    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
-    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
-    "cat": "giai-tri",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
-    "answers": [
-      {
-        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
-        "correct": true
-      },
-      {
-        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
-        "correct": false
-      },
-      {
-        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
-        "correct": false
-      },
-      {
-        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
         "correct": false
       }
     ]
