Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -498,6 +498,68 @@
     ]
   },
   {
+    "title": "Công cụ giúp phụ huynh xác định năng lực của con với học sinh THPT toàn quốc",
+    "content": "Công cụ SchoolRank giúp phụ huynh xác định năng lực học tập của con so với học sinh THPT trên toàn quốc một cách khách quan. Phụ huynh có thể nhập điểm học tập để nhận kết quả xếp hạng, từ đó có cái nhìn tổng thể về năng lực của con em mình. SchoolRank ra mắt từ năm 2020, sử dụng phương pháp luận ATAR của Úc và cho phép phụ huynh lập kế hoạch học tập hiệu quả hơn, đồng thời hỗ trợ trong quá trình tuyển sinh đại học.",
+    "link": "https://dantri.com.vn/giao-duc/cong-cu-giup-phu-huynh-xac-dinh-nang-luc-cua-con-voi-hoc-sinh-thpt-toan-quoc-20250319181119197.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Công cụ nào giúp phụ huynh xác định năng lực học tập của con so với học sinh THPT toàn quốc?",
+    "answers": [
+      {
+        "text": "SchoolRank",
+        "correct": true
+      },
+      {
+        "text": "EduRank",
+        "correct": false
+      },
+      {
+        "text": "StudentAnalyzer",
+        "correct": false
+      },
+      {
+        "text": "LearnTracker",
+        "correct": false
+      },
+      {
+        "text": "ClassCompare",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Trẻ em thời đại số cần trưởng thành qua trải nghiệm",
+    "content": "Bài viết nhấn mạnh sự cần thiết cho trẻ em trong thời đại số phải trải nghiệm thực tế để phát triển toàn diện. Việc lạm dụng công nghệ có thể dẫn đến thiếu hụt kỹ năng sống và giao tiếp. Trẻ em cần được khuyến khích tham gia vào các hoạt động ngoài trời và trải nghiệm thực tế để rèn luyện bản lĩnh, sự tự tin và khả năng thích nghi. Chương trình \"ILA Summer Never Ends 2025\" được giới thiệu như một giải pháp để trẻ em vừa học vừa chơi, phát triển kỹ năng trong môi trường quốc tế.",
+    "link": "https://dantri.com.vn/giao-duc/tre-em-thoi-dai-so-can-truong-thanh-qua-trai-nghiem-20250319230823588.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao trẻ em cần trải nghiệm thực tế trong thời đại số?",
+    "answers": [
+      {
+        "text": "Để phát triển kỹ năng sống và giao tiếp.",
+        "correct": true
+      },
+      {
+        "text": "Để tiết kiệm thời gian học tập.",
+        "correct": false
+      },
+      {
+        "text": "Để tránh việc sử dụng thiết bị số.",
+        "correct": false
+      },
+      {
+        "text": "Để rèn luyện sức khỏe thể chất.",
+        "correct": false
+      },
+      {
+        "text": "Để tham gia nhiều trò chơi điện tử.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thoát vị ba đĩa đệm đốt sống cổ",
     "content": "Anh An, 38 tuổi, được chẩn đoán bị thoát vị ba đĩa đệm đốt sống cổ, gây ra tình trạng đau cổ và yếu tay chân. Phẫu thuật đã được thực hiện để loại bỏ các đĩa đệm hư hỏng và giảm áp lực lên tủy sống, giúp anh phục hồi nhanh chóng. Nguyên nhân chính dẫn đến tình trạng này được xác định là do việc sử dụng điện thoại quá nhiều với tư thế không đúng.",
     "link": "https://vnexpress.net/thoat-vi-ba-dia-dem-dot-song-co-4863383.html",
@@ -2330,28 +2392,28 @@
     ]
   },
   {
-    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
-    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
-    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
-    "cat": "giai-tri",
-    "positivity": 6,
+    "title": "Ăn uống, sinh hoạt thế nào khi còn một quả thận?",
+    "content": "Bài viết cung cấp thông tin về cách sinh hoạt và chế độ ăn uống cho người còn một quả thận. Sau phẫu thuật cắt thận, người bệnh cần chú ý bảo vệ sức khỏe, tránh các môn thể thao va chạm và áp dụng chế độ dinh dưỡng lành mạnh, cân bằng, giảm muối và hạn chế thực phẩm chứa kali, phốt pho. Đồng thời, cần theo dõi sức khỏe định kỳ và thận trọng khi sử dụng thuốc không kê đơn.",
+    "link": "https://vnexpress.net/an-uong-sinh-hoat-the-nao-khi-con-mot-qua-than-4863313.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
     "importance": 7,
-    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
+    "question": "Cần lưu ý gì khi sinh hoạt và ăn uống cho người còn một quả thận?",
     "answers": [
       {
-        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
+        "text": "Cần tránh thực phẩm chứa nhiều kali và phốt pho.",
         "correct": true
       },
       {
-        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
+        "text": "Có thể ăn thoải mái các loại thực phẩm chế biến sẵn.",
         "correct": false
       },
       {
-        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
+        "text": "Nên tập các môn thể thao va chạm như bóng đá.",
         "correct": false
       },
       {
-        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
+        "text": "Không cần kiểm tra sức khỏe định kỳ.",
         "correct": false
       }
     ]
@@ -2379,6 +2441,33 @@
       },
       {
         "text": "Không có thông tin nào về ưu đãi cho xe GAC.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
+    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
+    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
+    "cat": "giai-tri",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
+    "answers": [
+      {
+        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
+        "correct": true
+      },
+      {
+        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
+        "correct": false
+      },
+      {
+        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
+        "correct": false
+      },
+      {
+        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
         "correct": false
       }
     ]
@@ -2468,33 +2557,6 @@
       },
       {
         "text": "Đau bụng và khó tiêu",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ăn uống, sinh hoạt thế nào khi còn một quả thận?",
-    "content": "Bài viết cung cấp thông tin về cách sinh hoạt và chế độ ăn uống cho người còn một quả thận. Sau phẫu thuật cắt thận, người bệnh cần chú ý bảo vệ sức khỏe, tránh các môn thể thao va chạm và áp dụng chế độ dinh dưỡng lành mạnh, cân bằng, giảm muối và hạn chế thực phẩm chứa kali, phốt pho. Đồng thời, cần theo dõi sức khỏe định kỳ và thận trọng khi sử dụng thuốc không kê đơn.",
-    "link": "https://vnexpress.net/an-uong-sinh-hoat-the-nao-khi-con-mot-qua-than-4863313.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Cần lưu ý gì khi sinh hoạt và ăn uống cho người còn một quả thận?",
-    "answers": [
-      {
-        "text": "Cần tránh thực phẩm chứa nhiều kali và phốt pho.",
-        "correct": true
-      },
-      {
-        "text": "Có thể ăn thoải mái các loại thực phẩm chế biến sẵn.",
-        "correct": false
-      },
-      {
-        "text": "Nên tập các môn thể thao va chạm như bóng đá.",
-        "correct": false
-      },
-      {
-        "text": "Không cần kiểm tra sức khỏe định kỳ.",
         "correct": false
       }
     ]
@@ -2844,6 +2906,33 @@
     ]
   },
   {
+    "title": "5 món ăn thường xuyên có thể phòng bệnh tim",
+    "content": "Bài viết đề cập đến 5 món ăn có thể giúp phòng ngừa bệnh tim, bao gồm dầu ôliu, chocolate đen, cà chua, hạt và tỏi. Dầu ôliu chứa chất béo không bão hòa đơn và polyphenol có tác dụng giảm viêm và cholesterol. Chocolate đen với hàm lượng ca cao cao có flavonoid giúp cải thiện lưu lượng máu và giảm huyết áp. Các loại hạt và cà chua cũng giàu chất dinh dưỡng hỗ trợ sức khỏe tim mạch. Tỏi với allicin có khả năng bảo vệ tim và ngăn ngừa cục máu đông.",
+    "link": "https://vnexpress.net/5-mon-an-thuong-xuyen-co-the-phong-benh-tim-4863283.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những món ăn nào có thể giúp phòng ngừa bệnh tim?",
+    "answers": [
+      {
+        "text": "Dầu ôliu, chocolate đen, cà chua, hạt, tỏi",
+        "correct": true
+      },
+      {
+        "text": "Thịt đỏ, thực phẩm chiên, bánh ngọt, đồ uống có ga",
+        "correct": false
+      },
+      {
+        "text": "Cá hồi, rau xanh, sữa chua, nước trái cây",
+        "correct": false
+      },
+      {
+        "text": "Mì gói, snack, kem, đồ ăn nhanh",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "42 tuổi mới phát hiện có hai tử cung",
     "content": "Chị Hạnh, 42 tuổi, đã phát hiện mình có hai tử cung và hai âm đạo sau khi đi khám do chu kỳ kinh kéo dài 14 ngày. Tình trạng này khá hiếm gặp, chỉ chiếm 5% các dị tật tử cung và thường không được phát hiện nếu không có kiểm tra y tế. Sau khi phát hiện, bác sĩ đã phẫu thuật cắt bỏ một tử cung chứa khối u xơ lớn để cải thiện sức khỏe cho chị. Mặc dù có hai tử cung, chị Hạnh vẫn có khả năng mang thai và có kinh nguyệt bình thường.",
     "link": "https://vnexpress.net/42-tuoi-moi-phat-hien-co-hai-tu-cung-4862862.html",
@@ -2870,33 +2959,6 @@
       },
       {
         "text": "Có dấu hiệu mang thai",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "5 món ăn thường xuyên có thể phòng bệnh tim",
-    "content": "Bài viết đề cập đến 5 món ăn có thể giúp phòng ngừa bệnh tim, bao gồm dầu ôliu, chocolate đen, cà chua, hạt và tỏi. Dầu ôliu chứa chất béo không bão hòa đơn và polyphenol có tác dụng giảm viêm và cholesterol. Chocolate đen với hàm lượng ca cao cao có flavonoid giúp cải thiện lưu lượng máu và giảm huyết áp. Các loại hạt và cà chua cũng giàu chất dinh dưỡng hỗ trợ sức khỏe tim mạch. Tỏi với allicin có khả năng bảo vệ tim và ngăn ngừa cục máu đông.",
-    "link": "https://vnexpress.net/5-mon-an-thuong-xuyen-co-the-phong-benh-tim-4863283.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những món ăn nào có thể giúp phòng ngừa bệnh tim?",
-    "answers": [
-      {
-        "text": "Dầu ôliu, chocolate đen, cà chua, hạt, tỏi",
-        "correct": true
-      },
-      {
-        "text": "Thịt đỏ, thực phẩm chiên, bánh ngọt, đồ uống có ga",
-        "correct": false
-      },
-      {
-        "text": "Cá hồi, rau xanh, sữa chua, nước trái cây",
-        "correct": false
-      },
-      {
-        "text": "Mì gói, snack, kem, đồ ăn nhanh",
         "correct": false
       }
     ]
@@ -3861,33 +3923,6 @@
     ]
   },
   {
-    "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
-    "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
-    "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
-    "cat": "kinh-doanh",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao Audi cắt giảm việc làm ở Đức?",
-    "answers": [
-      {
-        "text": "Do thách thức trong ngành công nghiệp ô tô và nhu cầu chậm lại đối với xe điện.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng cường sản xuất xe điện mới.",
-        "correct": false
-      },
-      {
-        "text": "Vì lý do tài chính cá nhân của nhân viên.",
-        "correct": false
-      },
-      {
-        "text": "Để mở rộng thị trường sang châu Á.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
     "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
     "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
@@ -3910,6 +3945,33 @@
       },
       {
         "text": "Đau lưng chỉ là vấn đề tạm thời.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
+    "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
+    "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
+    "cat": "kinh-doanh",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao Audi cắt giảm việc làm ở Đức?",
+    "answers": [
+      {
+        "text": "Do thách thức trong ngành công nghiệp ô tô và nhu cầu chậm lại đối với xe điện.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng cường sản xuất xe điện mới.",
+        "correct": false
+      },
+      {
+        "text": "Vì lý do tài chính cá nhân của nhân viên.",
+        "correct": false
+      },
+      {
+        "text": "Để mở rộng thị trường sang châu Á.",
         "correct": false
       }
     ]
@@ -4988,33 +5050,6 @@
       },
       {
         "text": "Vì chương trình không phản ánh đúng xã hội",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Xe điện ở California có thể mất đặc quyền làn ưu tiên",
-    "content": "Xe điện ở California có thể sẽ không còn đặc quyền sử dụng làn đường dành cho xe chở nhiều người từ tháng 10 tới. Hiện tại, các xe điện, dù chỉ chở một người, vẫn được phép chạy vào làn này, nhưng điều này có thể thay đổi. Chương trình này đã tồn tại từ năm 1998, nhằm khuyến khích người dân chuyển sang sử dụng xe không phát thải, nhưng quyền lợi này đang bị xem xét lại.",
-    "link": "https://vnexpress.net/xe-dien-o-california-co-the-mat-dac-quyen-lan-uu-tien-4862740.html",
-    "cat": "oto-xe-may",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Xe điện ở California có thể mất đặc quyền gì vào tháng 10 tới?",
-    "answers": [
-      {
-        "text": "Làn đường dành cho xe chở nhiều người",
-        "correct": true
-      },
-      {
-        "text": "Giảm thuế cho xe điện",
-        "correct": false
-      },
-      {
-        "text": "Quyền sử dụng bãi đỗ xe miễn phí",
-        "correct": false
-      },
-      {
-        "text": "Giảm giá khi mua xe điện",
         "correct": false
       }
     ]
